[gd_scene load_steps=6 format=2]

[ext_resource path="res://Art/CardBackground.png" type="Texture" id=1]
[ext_resource path="res://MapSupport/Map.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://MapSupport/Card.gd" type="Script" id=4]
[ext_resource path="res://Player/PlayerSpawnParticles.tscn" type="PackedScene" id=5]

[node name="Card" type="Node2D"]
script = ExtResource( 4 )

[node name="Card" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false
offset = Vector2( -16, -10 )

[node name="Map" parent="." instance=ExtResource( 2 )]

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="PlayerSpawnParticles" parent="." instance=ExtResource( 5 )]
lifetime = 0.4
[connection signal="can_move" from="." to="Player" method="_on_Card_can_move"]
[connection signal="cannot_move" from="." to="Player" method="_on_Card_cannot_move"]
[connection signal="new_player_position" from="Map" to="." method="_on_Map_new_player_position"]
[connection signal="check_direction" from="Player" to="." method="_on_Player_check_direction"]
[connection signal="finished_moving" from="Player" to="." method="_on_Player_finished_moving"]
